--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<label for="descompte">Codi de descompte:</label>
 	<input type="text" id="descompte" name="descompte"><br><br>
 
-        <label for="nom">Nom i Cognoms:</label>
+        <label for="nom">Noom i Cognoms:</label>
         <input type="text" id="nom" name="nom" required><br><br>
 
         <label for="visa">Número VISA:</label>
