Probant jenkins FASE C

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Reserva Automòbilistic</title>
 </head>
 <body>
-    <h1>Formulari de Reserva d'Automòbil</h1>
+    <h1>Formulari de Reserva d'Automòbil-Fase C</h1>
     <form action="reserva.php" method="POST">
 	<label for="descompte">Codi de descompte:</label>
 	<input type="text" id="descompte" name="descompte"><br><br>
